Fixes layout issues when narrative doesn't have a title or body

--- a/less/audio.less
+++ b/less/audio.less
@@ -7,6 +7,12 @@
   }
 }
 
+.is-audio {
+  .component__widget {
+    clear: both;
+  }
+}
+
 .audio {
   &__inner {
     .top-left,
